<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ina228</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for the INAs228 using a centralized TCA9548A multiplexer.</description>
  <maintainer email="medlaodip@gmail.com">Syndric</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>tca9548a</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>